manifest/mysql.yml
#DB도 kubernetes에서 실행하며 재 실행 시에도 변경된 데이터는 유실되지 않도록 설정한다.
apiVersion: v1
kind: Service
metadata:
  name: petclinic-mysql
  labels:
    app: petclinic
spec:
  ports:
    - port: 3306
  selector:
    app: petclinic
    tier: mysql
  clusterIP: None
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: petclinic-mysql
  labels:
    app: petclinic
spec:
  selector:
    matchLabels:
      app: petclinic
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: petclinic
        tier: mysql
    spec:
      containers:
      - image: mysql:5.7
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
