manifest/ingress.yml
# nginx-ingress-controller를 통해 어플리케이션에 접속이 가능하다.
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: petclinic-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /?(.*)
        backend:
          serviceName: petclinic-service
          servicePort: 80
